{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 23,
  "lineage": "af79cad9-7d1f-14dc-2977-78f08b404297",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6266e8e5f6ded9d",
            "domain": "vpc",
            "id": "eipalloc-0b6266e8e5f6ded9d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-54-107.compute-1.amazonaws.com",
            "public_ip": "3.233.54.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR1-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:internet-gateway/igw-0a15f64164f019f52",
            "id": "igw-0a15f64164f019f52",
            "owner_id": "717621813633",
            "tags": {
              "Name": "HR1-stag-myvpc",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6266e8e5f6ded9d",
            "connectivity_type": "public",
            "id": "nat-07ce0d8bdd6160151",
            "network_interface_id": "eni-08eae24b93e1f3dc0",
            "private_ip": "10.0.101.69",
            "public_ip": "3.233.54.107",
            "subnet_id": "subnet-08d590e0d2cc40921",
            "tags": {
              "Name": "HR1-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0a7fe23444790c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07ce0d8bdd6160151",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0a7fe23444790c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a15f64164f019f52",
            "id": "r-rtb-02cd24cf03abf79a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cd24cf03abf79a6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:route-table/rtb-08d713ded0e0767b1",
            "id": "rtb-08d713ded0e0767b1",
            "owner_id": "717621813633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR1-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR1"
            },
            "timeouts": null,
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:route-table/rtb-0d0a7fe23444790c5",
            "id": "rtb-0d0a7fe23444790c5",
            "owner_id": "717621813633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR1-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR1"
            },
            "timeouts": null,
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:route-table/rtb-02cd24cf03abf79a6",
            "id": "rtb-02cd24cf03abf79a6",
            "owner_id": "717621813633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR1-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR1"
            },
            "timeouts": null,
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0705c70088534239f",
            "route_table_id": "rtb-08d713ded0e0767b1",
            "subnet_id": "subnet-0bb658b666ef0bd26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e910974bba3f5305",
            "route_table_id": "rtb-08d713ded0e0767b1",
            "subnet_id": "subnet-0cdde528b772b52ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6a3641531f2825",
            "route_table_id": "rtb-0d0a7fe23444790c5",
            "subnet_id": "subnet-03be30adf5b29271c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f155daa5586f12",
            "route_table_id": "rtb-0d0a7fe23444790c5",
            "subnet_id": "subnet-0884bc74007419dd6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1b0a3385a2657a2",
            "route_table_id": "rtb-02cd24cf03abf79a6",
            "subnet_id": "subnet-08d590e0d2cc40921"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02730872de1f7c759",
            "route_table_id": "rtb-02cd24cf03abf79a6",
            "subnet_id": "subnet-0d9fa1e70a6249c1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-0bb658b666ef0bd26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb658b666ef0bd26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-0cdde528b772b52ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdde528b772b52ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-03be30adf5b29271c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be30adf5b29271c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-0884bc74007419dd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884bc74007419dd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-08d590e0d2cc40921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d590e0d2cc40921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:subnet/subnet-0d9fa1e70a6249c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9fa1e70a6249c1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717621813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR1-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR1"
            },
            "vpc_id": "vpc-066db34885fc3e73c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717621813633:vpc/vpc-066db34885fc3e73c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bda96522bf177883",
            "default_route_table_id": "rtb-0ae1e053e4765c42b",
            "default_security_group_id": "sg-0205c1329c91aa655",
            "dhcp_options_id": "dopt-09788684907d3a027",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-066db34885fc3e73c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae1e053e4765c42b",
            "owner_id": "717621813633",
            "tags": {
              "Name": "HR1-stag-myvpc",
              "environment": "stag",
              "owners": "HR1"
            },
            "tags_all": {
              "Name": "HR1-stag-myvpc",
              "environment": "stag",
              "owners": "HR1"
            }
          }
        }
      ]
    }
  ]
}